--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 .ipynb_checkpoints/
-./java_codes/.idea/
-./java_codes/out/
-./java_codes/java_codes.iml
+java_codes/.idea/
+java_codes/out/
+java_codes/java_codes.iml
